# umbra-cli

./: Cargo.toml
src/: api.rs  event.rs  main.rs  relay.rs
src/app/: chat.rs  community.rs  groups.rs  mod.rs  onboarding.rs  types.rs
src/db/: community.rs  friends.rs  groups.rs  identity.rs  messages.rs  mod.rs
src/ui/: add_friend.rs  chat.rs  community_invites.rs  community_list.rs  community_members.rs  community_roles.rs  community_view.rs  create.rs  create_community.rs  create_group.rs  discovery.rs  friend_requests.rs  home.rs  import.rs  join_community.rs  member_actions.rs  mod.rs  profile_import.rs  settings.rs  status_bar.rs  tab_bar.rs  username.rs  welcome.rs
